# audio2midi

./: pyproject.toml
audio2midi/: main.py
