[tool.poetry]
name = "audio2midi"
version = "0.1.0"
description = ""
authors = ["Emanuele Di Lorenzo <emanuele.dilore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaudio = "^0.2.14"
numpy = "^2.1.2"
scipy = "^1.14.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
